1999-10-28  Jonathan Blandford  <jrb@redhat.com>

	* src/gdk-pixbuf.h: turned convenience macros into convenience
	functions so some error checking could be added. 

	* src/io-tiff.c (image_load_increment): started work on the tiff
	non-incremental loader.
	(image_begin_load): Finished the incremental loader. 

	* src/io-gif.c (image_load_increment): started work on the gif
	incremental loader.

	* src/gdk-pixbuf-io.h: Changed ModuleType to GdkPixbufModule.

1999-10-27  Federico Mena Quintero  <federico@redhat.com>

	* src/gdk-pixbuf-render.c (gdk_pixbuf_render_threshold_alpha): New
	function to threshold a pixbuf's alpha channel into a bitmap.

	* src/gdk-pixbuf.c (gdk_pixbuf_new): Fixed so that it will
	contemplate future extensions to ArtPixBuf's formats.

	* src/io-png.c (png_info_callback): Use the new API of gdk_pixbuf_new().

	* src/gdk-pixbuf.h (gdk_pixbuf_get_height): Added some convenience
	macros to fetch the ArtPixBuf's fields.

1999-10-27  Havoc Pennington  <hp@pobox.com>

	* src/testpixbuf.c (main): Display the progressive load

	* src/io-png.c (setup_png_transformations): Break transformation 
	code into separate function
	(png_info_callback): Use setup_png_transformations
	
1999-10-27  Havoc Pennington  <hp@pobox.com>

	* src/gdk-pixbuf-io.c (gdk_pixbuf_new_from_xpm_data): Check
	properly whether the XPM module has already been loaded
	(gdk_pixbuf_new_from_file): Check properly if loader module 
	was already loaded (was checking if load symbol was present
	in order to decide whether to re-load; should check module !=
	NULL, then load != NULL)	
	(image_handler_load): Check in present working directory, 
	makes it easier to debug for now
	(file_formats): This array initializer was seriously on crack, 
	was assigning a function pointer to a GModule*

	* src/testpixbuf.c (main): Change type of pixbuf_loader to GdkPixbufLoader*
	
1999-10-27  Havoc Pennington  <hp@pobox.com>

	* src/gdk-pixbuf-loader.c (gdk_pixbuf_loader_finalize): 